# chessclock

./: .gitignore  Cargo.toml  README.md  devenv.nix  pyocd.yaml  run.sh
.cargo/: config.toml
.zed/: settings.json
nix/defmt-print/: default.nix
nix/pyocd/: default.nix
src/: app.rs  aux.rs  effect.rs  error.rs  game.rs  main.rs  menu.rs
