[package]
edition = "2021"
name = "chessclock"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.3.1", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
lcd-lcm1602-i2c = { version = "0.3.0", features = ["async"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
static_cell = "2.1.0"
thiserror = { version = "2.0.11", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
